# llzk-rs

./: flake.nix
.github/workflows/: ci.yml  notify-on-llzk-lib-bump-failure.yml
llzk/: Cargo.toml
llzk-macro/: Cargo.toml
llzk-sys/: Cargo.toml  build.rs  wrapper.h
llzk-sys/build-support/: Cargo.toml
llzk-sys/build-support/src/: cargo_commands.rs  config_traits.rs  default.rs  lib.rs  llzk.rs  mlir.rs  pcl.rs
llzk/src/: prelude.rs  symbol_ref.rs
llzk/src/dialect/: mod.rs
llzk/src/dialect/cast/: mod.rs
llzk/src/dialect/poly/: mod.rs
llzk/src/dialect/ram/: mod.rs  ops.rs  tests.rs
llzk/src/dialect/struct/: type.rs
llzk/tests/: cast_dialect.rs  ram_dialect.rs  struct_dialect.rs
llzk/tests/expected/: read_member.mlir
