[package]
name = "llzk-macro"
description = "Internal macros for LLZK rust bindings"
version = "0.3.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/project-llzk/llzk-rs"
keywords = ["mlir", "llvm", "llzk"]
readme = "README.md"

[lib]
proc-macro = true

[dependencies]
convert_case = "0.8.0"
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full", "extra-traits"] }
thiserror = "2"
