[package]
name = "llzk-sys"
version = "10.0.0"
edition = "2024"
keywords = ["llzk", "mlir"]
categories = ["external-ffi-bindings"]
description = "Rust bindings to the LLZK C API."
repository = "https://github.com/Veridise/llzk-rs"
readme = "README.md"
links = "LLZK"
license = "Apache-2.0"
exclude = [
  "/llzk-lib/.github",
  "/llzk-lib/changelogs",
  "/llzk-lib/doc",
  "/llzk-lib/nix",
  "/llzk-lib/python",
  "/llzk-lib/scripts",
  "/llzk-lib/test",
  "/llzk-lib/tools",
  "/llzk-lib/unittests",
  "/llzk-lib/.clang-format",
  "/llzk-lib/.clang-tidy",
  "/llzk-lib/.cmake-format.yaml",
  "/llzk-lib/.gitignore",
  "/llzk-lib/CMakePresets.json",
  "/llzk-lib/flake.lock",
  "/llzk-lib/flake.nix",
  "/llzk-lib/LICENSE.txt",
  "/llzk-lib/README.md",
]

[dependencies]
mlir-sys = { workspace = true }

[build-dependencies]
llzk-sys-build-support = { version = "1.0.0", path = "./build-support/" }
anyhow = "1"

[dev-dependencies]
rstest = "0.25.0"

[features]
default = []
pcl-backend = []
