[package]
name = "llzk"
version = "0.3.0"
edition = "2024"
keywords = ["llzk", "mlir"]
categories = ["api-bindings"]
description = "Rust bindings to the LLZK C API."
repository = "https://github.com/project-llzk/llzk-rs"
license = "Apache-2.0"
readme = "README.md"

[dependencies]
llzk-sys = { path = "../llzk-sys/", version = "10.0.0"}
llzk-macro = { path = "../llzk-macro", version = "0.3.0"}
melior = { workspace = true }
melior-macro = { workspace = true }
mlir-sys = { workspace = true }
log = "0.4"
paste = "1"
num-bigint = {version = "0.4", optional = true }

[dev-dependencies]
rstest = "0.25.0"
simplelog = {version = "0.12", features = ["test"] }
quickcheck = "1"
quickcheck_macros = "1"
similar-asserts = "1.7"
mlir-testutils = {version = "0.1", features = ["similar-asserts"]}

[features]
default = []
bigint = ["num-bigint"]
pcl-backend = ["llzk-sys/pcl-backend"]

[[example]]
name = "division"
