[package]
name = "llzk-sys-build-support"
version = "1.0.0"
edition = "2024"
keywords = ["llzk", "mlir"]
categories = ["development-tools::build-utils"]
description = "Helpers for building llzk-sys."
repository = "https://github.com/Veridise/llzk-rs"
readme = "README.md"
license = "Apache-2.0"

[dependencies]
bindgen = "0.71.1"
anyhow = "1.0.98"
cc = "^1.1"

[dev-dependencies]
tempfile = "3"
